--- a/GeometryChallenge.html
+++ b/GeometryChallenge.html
@@ -30,6 +30,7 @@
 		ctx.fillRect(x,y,size,size);
 		x+=60;
         y+=60;
+        size -=5;
 	//take original (size - new size)/2 = margin take y and add margin
     }
   
